--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@keyframes colorChange {
+  0% {
+    color: #4ade80;
+  } /* lime-400 */
+  25% {
+    color: #f97316;
+  } /* orange-500 */
+  50% {
+    color: #eab308;
+  } /* yellow-500 */
+  75% {
+    color: #3b82f6;
+  } /* blue-500 */
+  100% {
+    color: #4ade80;
+  } /* back to lime-400 */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.hover\:animate-colorChange:hover {
+  animation: colorChange 2s infinite;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
