--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
 @keyframes colorChange {
   0% {
     color: #4ade80;
-  } /* lime-400 */
+  }
   25% {
     color: #f97316;
-  } /* orange-500 */
+  }
   50% {
     color: #eab308;
-  } /* yellow-500 */
+  }
   75% {
     color: #3b82f6;
-  } /* blue-500 */
+  }
   100% {
     color: #4ade80;
-  } /* back to lime-400 */
+  }
+}
+.hover\:animate-colorChange:hover {
+  animation: colorChange 2s infinite;
 }
 
-.hover\:animate-colorChange:hover {
+.name {
   animation: colorChange 2s infinite;
 }
